Finsihed minor formatting issues and project. Loop sequencer can be customized based on developer needs. Was looking to make system generated based on a users initial inputs (eg number of bars, total samples) however ran out of time. May continue project if the stars align.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     margin:0;
-    font-size: 10pt;
+    font-size: 14pt;
 }
 h1{
     margin: 0;
@@ -72,27 +72,41 @@ h1{
     width:100vw;
 }
 #control{
-    display:flex;
+    display:grid;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr 0.5fr;
     position: fixed;
-    left:30vw;
-    bottom:5vh;
+    left:42.5vw;
+    bottom:0vh;
     border:black solid 2px;
     align-items:center;
-    width:40vw;
     justify-content: center;
+    box-sizing: border-box;
+    padding:0.5vw;
+    row-gap: 1vh;
+    width:15vw;
 }
 #control > div{
     text-align: center;
-    width:6.472vh;
-    height:4vh;
-    
+    width:3vw;
+    height:3vh; 
+    box-sizing: border-box;
+    justify-self: center;
 }
 #control img{
     height:80%;
-    margin-top: 0.5vh
 }
-#control > div#volume{
-    width:auto;
+#play img{
+    height:100%;
+}
+div#globalVolume{
+    grid-column-start:2;
+    grid-column-end:6;
+    width:100%;
+    box-sizing: border-box;
+}
+#volume_slider{
+    width:90%;
 }
 #clear{
     
@@ -101,9 +115,7 @@ h1{
 #time > div{
     display: inline;
 }
-#volume_slider{
-    width:80%;
-}
+
 #bpm_slider{
     position: absolute;
     left:10%;
@@ -127,7 +139,7 @@ h1{
     height:33vh;
     display: flex;
     justify-content: center;
-    padding:25px;
+    padding:2.5vh;
     box-sizing: border-box;
 }
 #titleContainer > div{
@@ -148,12 +160,11 @@ h1{
 }
 .verticalCentre{
     display: flex;
-
-justify-content: center;
-height: 50vh;
-box-sizing: border-box;
-padding-bottom: 5vh;
-align-content: center;
+    justify-content: center;
+    height: 50vh;
+    box-sizing: border-box;
+    padding-bottom: 5vh;
+    align-content: center;
 }
 #sequencerControls{
     background-color: bisque;
@@ -184,4 +195,12 @@ align-content: center;
     display: flex;
     height:8vh;
     align-items: center;
+}
+
+div#time{
+    font-size: 1.33em;
+    grid-column-start:1;
+    grid-column-end:6;
+    height:2vh;
+    margin-bottom: 5px;
 }
